--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
 
     <title>Indian Restaurant Melbourne | Takeaway Food Fitzroy - Masti</title>
+    <link rel="icon" type="image/png" href="/imgs/logo-glow.png"> <!--favicon not working :(-->
 
     <!-- CSS FILES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
